displaying categories and their subcategories in home page, displaying auction list for each category correctly auction displays its associated category path