@@ -99,21 +99,27 @@ public class AuctionController {
 
     @GetMapping("/auctions/{categoryName}")
     public String viewCategory(@PathVariable String categoryName, Model model, Authentication authentication) {
-        Category category = categoryRepository.findByNameIgnoreCase(StringUtils.slugToCategoryName(categoryName))
+        Category parentCategory = categoryRepository.findByNameIgnoreCase(StringUtils.slugToCategoryName(categoryName))
                 .orElseThrow(() -> new IllegalArgumentException("Invalid category name:" + categoryName));
 
         String currentUserName = authentication.getName();
         AuctionUser currentUser = userRepository.findByEmail(currentUserName)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
-        List<Auction> categoryAuctions = auctionRepository.findByCategoryAndEndTimeAfter(category, LocalDateTime.now())
+        List<Auction> aggregatedAuctions = auctionRepository.findByCategoryAndEndTimeAfter(parentCategory, LocalDateTime.now())
                 .stream()
-                .filter(auction -> !auction.getAuctionCreator().equals(currentUser))
-                .collect(Collectors.toList());
+                .filter(auction -> !auction.getAuctionCreator().equals(currentUser)).collect(Collectors.toList());
+
+        for (Category childCategory : parentCategory.getChildCategories()) {
+            aggregatedAuctions.addAll(auctionRepository.findByCategoryAndEndTimeAfter(childCategory, LocalDateTime.now())
+                    .stream()
+                    .filter(auction -> !auction.getAuctionCreator().equals(currentUser))
+                    .toList());
+        }
 
         model.addAttribute("currentUser", currentUser);
-        model.addAttribute("category", category);
-        model.addAttribute("categoryAuctions", categoryAuctions);
+        model.addAttribute("category", parentCategory);
+        model.addAttribute("categoryAuctions", aggregatedAuctions);
 
         return "auctions/category";
     }
